--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>INFO2180 Lab 1</title>
-</head>
-<body>
- <header>
-     <h1>INFO2180 Lab 1</h1>
-     <p>This is a simple webpage for Lab 1 of INFO2180.</p>
- </header>
- <main>
- <h2>Rajahni Cunningham</h2>
- <p>I am a Computer Science major who enjoys conversations surrounding music. My major hobby is listening to music</p>
- </main>
- <footer>
- <p>Copyright &copy; 2020 Rajahni Cunningham.</p>
- </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="styles.css">
+        <img src="Blue_Mountain_Raj.jpg" alt="Blue Mountain Raj">
+        <title>INFO2180 Lab 1</title>
+    </head>
+    <body>
+        <header>
+            <h1>INFO2180 Lab 1</h1>
+            <p>This is a simple webpage for Lab 1 of INFO2180.</p>
+        </header>
+        <main>
+            <h2>Rajahni Cunningham</h2>
+            <p>I am a Computer Science major who enjoys conversations surrounding technology.
+                I enjoy the idea of Web Development as I see it being an integral part of my experience
+                as a person interested in computing. The assets and experience gained by being able to design
+                appealing websites will forever be a relevant in my interest of study. This is only
+                the first step in my journey.
+                My major hobby is listening to music of all genres, my goal is to incorporate musical experience into
+                a website some day.
+            </p>
+        </main>
+        <footer>
+            <p>Copyright &copy; 2022 Rajahni Cunningham.</p>
+        </footer>
+    </body>
 </html>
